# pyladies-global-dashboard

./: .gitignore  Makefile  README.md  app.py  last-updated  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app-sponsor/: app.py
app-volunteer/: app.py  chapter_geocoded.csv  chapter_recode.py
